--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "codemirror": "^6.0.1",
     "core-js": "^3.8.3",
+    "install": "^0.13.0",
+    "npm": "^9.7.2",
     "vue": "^3.2.13",
-    "vue-codemirror": "^6.1.1"
+    "vue-codemirror": "^6.1.1",
+    "xml-beautifier": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
